test/spec_vectors/table_set/fail/module_1.wat
(module (table $t 10 externref) (func $type-index-value-empty-vs-i32-externref (table.set $t)))